[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["env", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["any", "runtime-tokio-native-tls", "chrono", "sqlite", "mysql"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
