[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["env", "derive"] }
email_address = "0.2.9"
hmac = { version = "0.12.1", features = ["std"] }
jwt = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "chrono", "mysql"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
